<resources>
    <string name="app_name">didaktik-app-DEMO</string>
    <string name="titulo">Sare josleak</string>
    <string name="amaiera">OSATU PUZZLEA!</string>
    <string name="descripcion_logo">Logotipo de la aplicacion</string>
    <string name="mapa">Mapa begiratu</string>
    <string name="prueba1_barcos">Itsasontziak portura eraman</string>
    <string name="prueba2_pescar">Sardinak harrapatu</string>
    <string name="prueba3_sopa">Hizki salda</string>
    <string name="prueba4_rederas">Resolver puzle rederas (botón provisional)</string>
    <string name="prueba5_cocinar">Sardinak kozinatu</string>
    <string name="prueba6_cancion">Bilbainadak</string>
    <string name="prueba7_trainera">Txalupen galdetegia</string>
    <string name="prueba8_alimentar">Mentxuri sardinak bota</string>
    <string name="prueba9_puerto">Resolver puzle puerto (botón provisional)</string>
    <string name="salir">Atera</string>
    <string name="serantes_mendia">Serantes Mendia</string>
    <string name="image_barco">Santurziko edo Bilboko itsasontzia</string>
    <string name="button_santurtzi">Santurtziko Portua</string>
    <string name="button_bilbo">Bilboko Portua</string>
    <string name="primera_pregunta">
        Egunon, neska-mutilak gaur goizean harrapatutako arrainak itxura ona dituzte, beraz
        azkar-azkar eraman beharko ditugu prezio onean saltzeko. Zein bide hartu beharko dugu?
    </string>
    <string name="segunda_pregunta">
        Kaixo, kaixo. Zer moduz? Nik momentu honetan meategietan lortutako materialak industria
        aldera eraman behar ditut. Zer bide hartu beharko dut?
    </string>
    <string name="tercera_pregunta">
        Arratsaldeon, Madagaskarretik etorritako zenbait kontainer ekarri ditut eta portuan uzteko
        esan didate. Zein bide hartu behar dut karga uzteko?
    </string>
    <string name="cuarta_pregunta">
        Egun on, gaurko eguna oso ona izan da, itsasoan kalitatezko sardinak lortu ditugu eta.
        Azkar! Esaiguzu zein bide hartu behar dugun sardina hauek kozinatzeko eta disfrutatzeko?
    </string>
    <string name="quinta_pregunta">
        Aupa, nire lankideak lehenago etorri dira eta sardina goxo-goxoak eramaten dituzte. Zein
        bide hartu behar dut haiengana heltzeko?
    </string>
    <string name="sexto_pregunta">
        Hi. Upss.. Barkatu hainbat ordu daramagu itsasoan turista desberdinekin eta ingelesez hitz
        egitea automatikoki atera zait. Zein bide hartu behar dut turista guzti hauek portuan
        uzteko?
    </string>
    <string name="todas">Guztiak</string>
    <string name="respuesta">ongi erantzun dituzu!</string>
    <string name="intentar_de_nuevo">berriro egitea</string>
    <string name="intentar">Hobetu ahal duzu, saitu berriro.</string>
    <string name="siguiente">hurrengo ariketa</string>
    <string name="tiempo">00:30</string>
    <string name="bilbainada1">Desde Santurce a Bilbao\nVengo por toda la orilla,\nCon mi saya remangada\nLuciendo %s</string>
    <string name="bilbainada2">Vengo deprisa y corriendo\nPorque me oprime el corsé,\nVoy %s\n¡Quién compra!\nSardinas frescué</string>
    <string name="bilbainada3">Mis sardinitas\nQue ricas son\nSon de %s</string>
    <string name="bilbainada4">La del primero me llama,\nLa del segundo también,\n%s</string>
    <string name="bilbainada5">¿A cómo las trae usted?\nY yo le digo que, a cuatro,\nElla me dice que, a tres,%s\n¡Quién compra!\nSardinas frescué</string>
    <string name="bilbainada_resp1_1">la blusilla</string>
    <string name="bilbainada_resp1_2">la pantorrilla</string>
    <string name="bilbainada_resp1_3">la mesilla</string>
    <string name="bilbainada_resp2_1">gritando por las calles</string>
    <string name="bilbainada_resp2_2">cantando por las calles</string>
    <string name="bilbainada_resp2_3">bailando por las calles</string>
    <string name="bilbainada_resp3_1">la costa, las traigo yo</string>
    <string name="bilbainada_resp3_2">la costa, las traigo ya</string>
    <string name="bilbainada_resp3_3">Santurce, las traigo yo</string>
    <string name="bilbainada_resp4_1">La del tercero está bien</string>
    <string name="bilbainada_resp4_2">La del tercero me dice</string>
    <string name="bilbainada_resp4_3">Las dos me preguntan</string>
    <string name="bilbainada_resp5_1">cojo la cesta y me marcho</string>
    <string name="bilbainada_resp5_2">le digo que la veo después</string>
    <string name="bilbainada_resp5_3">cojo la cesta y hasta las tres</string>
    <string name="iniciar_juego">Hasi Jokua!</string>
    <string name="explicacion_cancion1">Bilbo Handiko historiaren parte handia dira bilbainadak. Hauek herriko plazan sortzen eta abesten ziren kantak dira, Bilbo eta haren inguruko herrietan gertatzen zena kontatzen dute eta familian eta kuadrillan abesten ziren herriko plazan.</string>
    <string name="explicacion_cancion2">Bilborekin partekatzen dute jatorria, 1300 urtea inguru hasi ziren eta gaur arte mantentzen dira. 1920. urtean hasi ziren talde formalak sortzen, haien artean Los Chimberos, Los Cinco Bilbainos, Los Chimbos, Los Bocheros... Gaur egun, oraindik ere badaude genero musikal honetarako txapelketak, Radio Nervionek antolatuak.</string>
    <string name="explicacion_cancion3">Bilbainaden artean ezaguenetariko bat “Desde Santurce a Bilbao” du izena. Honek, Santurtziko sardinak saltzen dituen emakume bati buruz hitz egiten du, izenak berak dioen moduan, Santurtzin hartuta Bilbon saltzen ditu sardinak.</string>
    <string name="explicacion_sopa1">Gure herriko emakumeek oso rol garrantsitsua izan zuten arrantzan. Haiek arrantzarako beharrezkoak ziren sareak josten zituzten, haiek barik Santurtziko ekonomia porrota bat izango zatekeen.</string>
    <string name="explicacion_sopa2">Haien egunerokotasunean honakoa egin behar zuten: sareak sortu, behar izatekotan sarea josi eta erreparatu eta harrapatutakoa merkatuan saltzen zuten gauean. Oso lan garrantsitsua zen eta normalean elizako portikoan edo portuan egiten zuten, behin eta berriro arrainek apurtutako sareak josiz.</string>
    <string name="explicacion_sopa3">Garai horretako emakumeen rolarekin alderatuta, Sartutzitarrak oso garrantsitsuak ziren arrantza ezin baitzen haiek gabe egin eta beraz, ezin izango luketen dirurik irabazi.</string>
    <string name="explicacion_sopa4">Azalpenaren ondoren zuen momentua ailegatu da, hurrengo hizki salda osatu behar duzue aurretik ikasitako guztia kontuan hartuta. Asmatzen duzuen hitz bakoitzarekiko puzzle baten piezak lortuko dituzue. Amaieran, puzzleko pieza guztiak elkartuz gero, sorpresa bat izango duzue!</string>
    <string name="explicacion_sardinas1">Sardinak gure Kantauri itsasoan topa dezakegun gorputzerako eta bihotzerako oso ona den arrain bat da. Medikuek elikagai hori asko gomendatzen dute, dieta orekatu eta gozoa nahi izatekotan.</string>
    <string name="explicacion_sardinas2">Arrain gozo horiek Karmengo jaien bueltan, hau da uztailean guztiok dakigun bezala, arrantzatzen dira. Hori dela eta, antzinatik uztailaren erdian sardinak dastatzeko jaia ospatzen zen, gaur egungo Karmengo jaiak.</string>
    <string name="explicacion_sardinas3">Sardina erreak, gure gastronomia eta kulturaren parte dira, aintzinatik gure arbasoek horrela maitatzen zuten arrain hori jatea. Horiek egiteko txingar ez oso gorien gainean prestatzen dira, ondoren gatz lodia jarriz. Seguruenik beti jaten dituzue halakoak jaietan!</string>
    <string name="explicacion_sardinas4">Sardina erreak gure ondarearen parte denez hainbat jatetxeetan horiek sukaldatzen dituzte. Hogar del Pescador, Santurtziko portuan kokatuta dagoen jatetxe bat da eta hartan arrain mota hau gure arbasoek nola sukaltzen zuten ezagutzeko aukera izango duzue, batez ere 1959tik errezeta berbera egiten baitute.</string>
    <string name="explicacion_serantes1">Serantes 452m dituen eta Bilboko itsadarraren ezkerreko ertzean dagoen mendia da eta ikusi ahal duzuen moduan, Bilboko portuaren gainean dago.</string>
    <string name="explicacion_serantes2">Eskualdeko leku guztietatik ikus daiteke, eta gailurretik, Bilbo Handiko eskualde osoa ikusten da, portua oinetan izanik. Hori dela eta, sardina-saltzaileak gailurretik ikusten zuten sardinez betetako itsasontziak santurtzira ailegatzen zirela eta besteak, berriz, Bilbora.</string>
    <string name="explicacion_serantes3">Mendia igotzeko egun berezi bat dago Cornittes izenekoa, egun hartan Santurtziko biztanle gehienok mendi tontorrera igo egiten gara.</string>
    <string name="explicacion_serantes4">Lehenengo sardina lortzeko, portuko itsasontziak gidatzen lagundu behar didazue. Horretatako sardinak dituzten ontziak Santurtziko portura sartu eta beste guztiak Bilboko Portu Handira.</string>
    <string name="explicacion_sardinera1">Eskultura hau, buruan sardina saskia duen emakume baten irudia baino zerbait gehiago da. Ikur garrantzitsua da herriarentzat eta esanahi berezia du. La Sardinerak Santurtziko herriaren historia eta tradizioa gogorarazten digu.</string>
    <string name="explicacion_sardinera2">Iraganean, sardinak oso garrantzitsuak ziren Santurtziko gure herriko jendearen bizitzan. Arrantzaleak itsasora irteten ziren sardinak harrapatzera, eta emakumeek funtsezko eginkizuna betetzen zuten hirian saltzen zituztenean.</string>
    <string name="explicacion_sardinera3">Sardina-saltzailearen eskulturak beren etxeetara eta komunitateetara janari freskoa eramatek gogor lan egiten zuten emakume ausart guztiak ohoratzen ditu. Santurtziko historian emakumeek izan duten indarra eta garrantzia sinbolizatzen ditu.</string>
    <string name="explicacion_sardinera4">Herri honek itsasoarekin eta arrantzarekin duen lotura berezia ere gogorarazten digu. Itsasoa Santurtziko bizitzaren funtsezko zati bat izan da denbora luzez, eta La Sardinerak egunero gogorarazten dira.</string>
    <string name="explicacion_udala1">Karmengo jaiak 1907tik Santurtzin ospatzen dira. Urte horretan, Karmengo Ama Birjina izendatu zuten Santurtziko udalerri berriko patroi gisa. Maiatzaren 29an gertatu zen, eta handik aste batzuetara, uztailaren 21ean (igandea), lehen itsas prozesioa egin zen. Harrezkero, Karmengo jaiak ospatzen dira.</string>
    <string name="explicacion_udala2">Egun horietan hainbat ekitaldi prestatzen dira, itsas prozesioaz gain, kalejirak, antzerkiak, gastronomia lehiaketak, kontzertuak, kirol lehiaketak, herri sardina-jana eta su artifizialak. Kuadrillak dira jarduera gehien egiten dituztenak.</string>
    <string name="explicacion_udala3">Kirol-probetan eta ekitaldietan lehiatzeko antolatzen diren taldeak, hala nola Jaitsiera Bustiak, «Karmengo Jaietako Areto Futboleko Txapelketa» edo «Santurtzi Hiria» tenis-txapelketa, dagoeneko hogeigarren edizioa duena. Proba horietan zuek ere parte har dezakezue, zuen adineko haurrentzako kuadritxikiak baitaude.</string>
    <string name="explicacion_udala4">Ni lehenengo ostiraleko "Gran Sardinadan", jaiei hasiera ematen diet udaletxetik ateratzen naizenean.</string>
    <string name="explicacion_udala5">Goaz ikasleok azken ariketa egitera!! Udaletxean eta plaza zentralean gaudela, jaien guneak, sardinak jaten lagunduko didazue.</string>
    <string name="explicacion_azkena1">Alaaaaaa begira nire hegala berriz ere ondo dago!!! Eskerrik asko zuen lan gogorra eta laguntzagatik. Orain emango dizuedana argazki puzzlearen azken pieza da, goaz egitera!</string>
    <string name="explicacion_azkena_del_todo">Oso ondo lortu duzue!! Hori, gaur egungo Santurtziko portuko mapa da!! Eskerrik asko eskainitako laguntzagatik, orain nire etxera noa! Uztailera arte!!</string>
    <string name="explicacion_principio_1">Kaixo! Nik dakizuen bezala Mentxu naiz, zuek bezala gure herri zoragarri honen biztanlea. Ni jaietan etortzen naiz eta hauek bukatzen direnean berriro ere nire etxera bueltatzen naiz energia berreskuratzeko.</string>
</resources>