<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".VerdaderoFalsoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="25sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serantes_mendia"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvEnunciado"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20sp"

            android:background="@drawable/textview_enunciado"
            android:padding="10sp"
            android:textSize="15sp" />
        <View
            android:layout_width="48dp"
            android:layout_height="34dp"
            android:layout_marginTop="-1dp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/bubble" />
        <ImageView
            android:id="@+id/ivBarco"
            android:layout_width="215dp"
            android:layout_height="160dp"
            android:layout_marginBottom="30sp"
            android:contentDescription="@string/image_barco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSanturtzi"
                style="@style/CustomButtonStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_green"
                android:text="@string/button_santurtzi" />

            <Button
                android:id="@+id/btnBilbao"
                style="@style/CustomButtonStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/button_red"
                android:text="@string/button_bilbo"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvRespuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>